# pyjit

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
python/pyjit/: __init__.py  _cache.py  _compiler.py  _pyjit.pyi  _tracer.py  decorators.py  inspect.py
scripts/: eval_pyjit.py  smoke_test.py  validate_all.sh
src/: lib.rs
src/codegen/: abi.rs  cranelift.rs  mod.rs
src/guards/: deopt.rs  mod.rs
src/ir/: builder.rs  mod.rs  ops.rs  types.rs
src/optimizer/: const_fold.rs  dce.rs  mod.rs  passes.rs
src/tracer/: bytecode.rs  mod.rs  recorder.rs  trace.rs
tests/: conftest.py  test_codegen.py  test_decorator.py  test_guards.py  test_ir.py  test_tracer.py
tests/benchmarks/: bench_loops.py  bench_numeric.py  bench_vs_cpython.py  conftest.py
tests/integration/: conftest.py  test_arithmetic.py  test_bitwise.py  test_bool_conditions.py  test_collections.py  test_controlflow.py  test_correctness.py  test_fallback.py  test_functions.py  test_loops.py  test_strings.py  test_swap.py
